kubernetes/apps/utilities/goldilocks/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app goldilocks
  annotations:
    gatus.home-operations.com/endpoint: |
      group: utilities
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: *app
spec:
  hostnames: ["goldilocks.${ROOT_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: goldilocks-dashboard
          port: 80
